<!--
  ~ Copyright (c) 2022 Solana Mobile Inc.
  -->

<resources>
    <string name="app_name">SeedVaultImpl</string>

    <!-- Permissions strings -->
    <string name="permission_group_seed_vault">Seed Vault</string>
    <string name="permission_access_seed_vault">access your Seed Vault</string>

    <!-- Strings used for fragments for navigation -->
    <string name="fragment_label_seeds">Seeds</string>
    <string name="fragment_label_seed_detail">Seed Details</string>

    <!-- Seeds fragment strings -->
    <string name="menu_action_add">Add</string>
    <string name="menu_action_clear">Clear</string>

    <!-- Seed Detail fragment strings -->
    <string name="menu_action_ok">OK</string>
    <string name="title_seed_phrase">Seed phrase</string>
    <string name="hint_seed_name">(optional) Friendly seed name</string>
    <string name="text_phrase_length_12">12</string>
    <string name="text_phrase_length_24">24</string>
    <string name="label_pin">PIN</string>
    <string name="hint_pin">4 to 20 characters</string>
    <string name="error_invalid_pin">PIN must be between 4 and 20 characters</string>
    <string name="label_enable_biometrics_for_seed">Enable biometrics for this seed</string>
    <string name="label_authorized_apps">Authorized wallet apps</string>

    <!-- Seed phrase word RecyclerView item strings -->
    <string name="error_invalid_seed_word">Word not recognized</string>

    <!-- Select seed fragment -->
    <string name="label_select_seed_title">Choose a seed to establish a connection with:</string>
    <string name="label_select_seed">Seeds</string>
    <string name="label_save_seed">Save</string>

    <!-- Authorize fragment -->
    <string name="label_authorize_title">Seed Vault™</string>
    <string name="label_authorize_seed">Connection request</string>
    <string name="label_authorize_app">From</string>
    <string name="label_authorize_for">Connect to</string>
    <string name="label_authorize_info">See connection details</string>
    <string name="label_authorize_fingerprint">Confirm with Fingerprint</string>
    <string name="action_pin">Use password</string>
    <string name="action_cancel">Don\'t allow</string>
    <string name="label_authorize_transaction">Approve transaction</string>
    <string name="label_authorize_message">Apply signature</string>
    <string name="label_authorize_public_key">Create new wallet</string>
    <string name="error_incorrect_pin">Password not correct, please try again. You have %1$d attempt(s) remaining.</string>

    <!-- Enter PIN dialog -->
    <string name="label_enter_pin">Enter your seed password</string>

    <!-- Authorize info fragment -->
    <string name="label_authorize_info_title">Ongoing connection</string>
    <string name="label_authorize_info_body1"><big>This app will have ongoing access with your Seed Vault™ until you decide otherwise</big>\n\n<small>You will be able to manage or revoke this access at any time in Seed Vault™ settings</small></string>
    <string name="label_authorize_info_body2"><b>This app <u>will</u> be able to:</b>\n\n\u00A0✓\u2003View wallet balance and activity\n\n\u00A0✓\u2003Request approval for transactions\n\n<b>This app <u>will not</u> be able to:</b>\n\n\u00A0✕\u2003Move funds without your permission</string>
</resources>