<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 Solana Mobile Inc.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.authorizeinfo.AuthorizeInfoFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/label_authorize_info_title"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceTitleSmall"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_back" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/label_authorize_info_body1"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintTop_toBottomOf="@id/button_back" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/label_authorize_info_body2"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintTop_toBottomOf="@id/label_body1"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>