<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 Solana Mobile Inc.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.authorize.AuthorizeFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageview_seed_vault"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginVertical="24dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_seed_vault_hero" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_authorization_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/imageview_seed_vault"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="?attr/textAppearanceHeadlineSmall" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_authorize_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/label_authorization_type"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_authorize_app"
        android:textColor="?attr/colorOutline"
        android:textAppearance="?attr/textAppearanceLabelMedium" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group_authorize_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/label_authorize_app">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageview_app_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/background_icon" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/label_authorize_info"
            app:layout_constraintStart_toEndOf="@id/imageview_app_icon"
            app:layout_constraintEnd_toStartOf="@id/imageview_authorize_info"
            android:textAppearance="?attr/textAppearanceBodyLarge" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_authorize_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageview_app_icon"
            app:layout_constraintEnd_toStartOf="@id/imageview_authorize_info"
            android:text="@string/label_authorize_info"
            android:textAppearance="?attr/textAppearanceBodySmall" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageview_authorize_info"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:tint="?attr/colorOnSurface"
            android:src="@drawable/ic_baseline_chevron_right_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_authorize_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/group_authorize_app"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_authorize_for"
        android:textColor="?attr/colorOutline"
        android:textAppearance="?attr/textAppearanceLabelMedium" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group_for"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/label_authorize_for">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageview_select_seed_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toTopOf="@id/text_seed_name"
            app:layout_constraintBottom_toBottomOf="@id/text_seed_name"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/background_icon"
            android:src="@drawable/ic_seed_vault"
            android:tint="?attr/colorOnSurface" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_seed_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageview_select_seed_icon"
            app:layout_constraintEnd_toStartOf="@id/imageview_select_seed_more"
            android:textAppearance="?attr/textAppearanceBodyLarge" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageview_select_seed_more"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_baseline_chevron_right_24"
            android:tint="?attr/colorOnSurface" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_for_below"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        app:layout_constraintTop_toBottomOf="@id/group_for"
        app:dividerThickness="0.5dp"
        app:dividerColor="?attr/colorSurfaceVariant" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageview_fingerprint_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/divider_for_below"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="?android:fingerprintAuthDrawable" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_fingerprint_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/imageview_fingerprint_icon"
        android:text="@string/label_authorize_fingerprint"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textAlignment="center" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_fingerprint_below"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toBottomOf="@id/label_fingerprint_option"
        app:dividerThickness="0.5dp"
        app:dividerColor="?attr/colorSurfaceVariant" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/divider_fingerprint_below"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/action_cancel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/divider_fingerprint_below"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/action_pin" />

</androidx.constraintlayout.widget.ConstraintLayout>